Migrated all data to database storage due to lack of consistency in file storage
