# backend/models/shoe.py
@@ -1,26 +1,37 @@
 #!/usr/bin/python3
 """Shoe Model Class
 """
-from backend.models.base import BaseModel
+from backend.models.base import BaseModel, Base
+from sqlalchemy import Column, String, Float
+from backend.models import method
 
-
-class Shoe(BaseModel):
+class Shoe(BaseModel, Base):
     """Shoe model
     
     Args:
         BaseModel (class): base model for classes
     """
+    if method == 'db':
+        __tablename__ = 'shoes'
+        shoe_name = Column(String(128), nullable=False)
+        shoe_category = Column(String(128), nullable=False)
+        shoe_brand = Column(String(128), nullable=False)
+        _shoe_price = Column(Float, nullable=False, default=0.0)
+        shoe_color = Column(String(128), nullable=False)
+        _shoe_image = Column(String(256), nullable=False)
+        
     def __init__(self, *args, **kwargs):
         """Initialize a new Shoe instance."""
         super().__init__(*args, **kwargs)
         
-        self.shoe_name = ""
-        self.shoe_category = ""
-        self.shoe_brand = ""
-        self._shoe_price = 0.0
-        self.shoe_color = ""
-        self._shoe_image = ""
-        
+        if method != 'db':
+            self.shoe_name = ""
+            self.shoe_category = ""
+            self.shoe_brand = ""
+            self._shoe_price = 0.0
+            self.shoe_color = ""
+            self._shoe_image = ""
+
         if kwargs:
             for key, value in kwargs.items():
                 if key != "__class__":
